updated some userRoutes api docs
